fixed responsive link wraps in legal pages

--- a/components/privacypolicycontent.module.scss
+++ b/components/privacypolicycontent.module.scss
@@ -12,6 +12,17 @@
     text-align: center;
     margin-bottom: 40px;
   }
+
+  .text {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+  }
+
   .text,
   h5,
   h6,
